--- a/package.json
+++ b/package.json
@@ -13,19 +13,27 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.0.0",
+    "@expo-google-fonts/manrope": "^0.3.0",
+    "@expo/vector-icons": "^14.1.0",
     "@react-navigation/native": "^6.0.2",
+    "@shopify/flash-list": "1.6.3",
+    "axios": "^1.8.4",
     "expo": "~50.0.17",
+    "expo-dev-client": "~3.3.12",
     "expo-font": "~11.10.3",
+    "expo-image": "~1.10.6",
+    "expo-linear-gradient": "^14.0.2",
     "expo-linking": "~6.2.2",
     "expo-router": "~3.4.10",
     "expo-splash-screen": "~0.26.5",
     "expo-status-bar": "~1.11.1",
     "expo-system-ui": "~2.9.4",
     "expo-web-browser": "~12.8.2",
+    "lodash": "^4.17.21",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-web": "~0.19.6"
