--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
-    "start": "expo start",
+    "start": "expo start -c",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
@@ -14,35 +14,39 @@
   },
   "dependencies": {
     "@expo-google-fonts/manrope": "^0.3.0",
+    "@expo/config-plugins": "~9.0.0",
     "@expo/vector-icons": "^14.1.0",
-    "@react-navigation/native": "^6.0.2",
-    "@shopify/flash-list": "1.6.3",
+    "@gorhom/bottom-sheet": "^5.1.2",
+    "@react-navigation/native": "^7.0.14",
+    "@shopify/flash-list": "1.7.3",
     "axios": "^1.8.4",
-    "expo": "~50.0.17",
-    "expo-dev-client": "~3.3.12",
-    "expo-font": "~11.10.3",
-    "expo-image": "~1.10.6",
-    "expo-linear-gradient": "^14.0.2",
-    "expo-linking": "~6.2.2",
-    "expo-router": "~3.4.10",
-    "expo-splash-screen": "~0.26.5",
-    "expo-status-bar": "~1.11.1",
-    "expo-system-ui": "~2.9.4",
-    "expo-web-browser": "~12.8.2",
+    "expo": "^52.0.46",
+    "expo-dev-client": "~5.0.20",
+    "expo-font": "~13.0.4",
+    "expo-image": "~2.0.7",
+    "expo-linear-gradient": "~14.0.2",
+    "expo-linking": "~7.0.5",
+    "expo-router": "~4.0.20",
+    "expo-splash-screen": "^0.29.24",
+    "expo-status-bar": "~2.0.1",
+    "expo-system-ui": "~4.0.9",
+    "expo-web-browser": "~14.0.2",
     "lodash": "^4.17.21",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "0.73.6",
-    "react-native-reanimated": "~3.6.2",
-    "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0",
-    "react-native-web": "~0.19.6"
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-native": "0.76.9",
+    "react-native-gesture-handler": "~2.20.2",
+    "react-native-reanimated": "~3.16.1",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.4.0",
+    "react-native-web": "~0.19.6",
+    "expo-blur": "~14.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/react": "~18.2.45",
+    "@types/react": "~18.3.12",
     "jest": "^29.2.1",
-    "jest-expo": "~50.0.4",
+    "jest-expo": "~52.0.6",
     "react-test-renderer": "18.2.0",
     "typescript": "^5.1.3"
   },
